--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,5 @@ jobs:
           username: 'root'   #ssh user name
           server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './*'  # 对应我们项目build的文件夹路径
+          password: ${{ secrets.PASSWORD }} #引用之前创建好的secret
           remote_path: '/'
