--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,5 +19,5 @@ jobs:
           server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
           password: wbdWBD222
-          local_path: '*'
+          local_path: '.*'
           remote_path: '/root/mytest1'
